--- a/rig.ipynb
+++ b/rig.ipynb
@@ -92,12 +92,12 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "VAE(\n",
-       "  (fc1): Linear(in_features=10, out_features=400, bias=True)\n",
-       "  (fc21): Linear(in_features=400, out_features=5, bias=True)\n",
-       "  (fc22): Linear(in_features=400, out_features=5, bias=True)\n",
-       "  (fc3): Linear(in_features=5, out_features=400, bias=True)\n",
-       "  (fc4): Linear(in_features=400, out_features=10, bias=True)\n",
+       "BetaVAE(\n",
+       "  (fc1): Linear(in_features=10, out_features=32, bias=True)\n",
+       "  (fc21): Linear(in_features=32, out_features=5, bias=True)\n",
+       "  (fc22): Linear(in_features=32, out_features=5, bias=True)\n",
+       "  (fc3): Linear(in_features=5, out_features=32, bias=True)\n",
+       "  (fc4): Linear(in_features=32, out_features=10, bias=True)\n",
        ")"
       ]
      },
@@ -119,64 +119,7 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Train Loss: 0.23852225937522376\n",
-      "Train Loss: -0.07086417240162309\n",
-      "Train Loss: -0.31805492268923\n",
-      "Train Loss: -0.6278284910397652\n",
-      "Train Loss: -0.738910334232526\n",
-      "Train Loss: -0.777806621331435\n",
-      "Train Loss: -0.792729261593941\n",
-      "Train Loss: -0.8013213536678216\n",
-      "Train Loss: -0.8050079758350666\n",
-      "Train Loss: -0.8104759515860142\n",
-      "Train Loss: -0.8127880906447386\n",
-      "Train Loss: -0.8138412191317632\n",
-      "Train Loss: -0.8146612659478799\n",
-      "Train Loss: -0.8151785777165339\n",
-      "Train Loss: -0.8152213142468379\n",
-      "Train Loss: -0.8160267243018517\n",
-      "Train Loss: -0.8166583883456695\n",
-      "Train Loss: -0.8171907724478306\n",
-      "Train Loss: -0.8164930664576017\n",
-      "Train Loss: -0.8174881369639666\n",
-      "Train Loss: -0.8172295506183918\n",
-      "Train Loss: -0.8176563534981165\n",
-      "Train Loss: -0.8178965556315887\n",
-      "Train Loss: -0.81769859790802\n",
-      "Train Loss: -0.8179870721621391\n",
-      "Train Loss: -0.8180087040632199\n",
-      "Train Loss: -0.8175732906048114\n",
-      "Train Loss: -0.8175020447144141\n",
-      "Train Loss: -0.8178203808955657\n",
-      "Train Loss: -0.818039440191709\n",
-      "Train Loss: -0.8177252793923403\n",
-      "Train Loss: -0.8183047022574987\n",
-      "Train Loss: -0.8183694497132913\n",
-      "Train Loss: -0.8182077209154764\n",
-      "Train Loss: -0.8180894225071638\n",
-      "Train Loss: -0.8179389528739147\n",
-      "Train Loss: -0.8181746968856225\n",
-      "Train Loss: -0.8184177844952314\n",
-      "Train Loss: -0.8183013460575006\n",
-      "Train Loss: -0.8183969045296694\n",
-      "Train Loss: -0.8183373564328903\n",
-      "Train Loss: -0.8183900515238444\n",
-      "Train Loss: -0.8184389472007751\n",
-      "Train Loss: -0.8186436203809885\n",
-      "Train Loss: -0.8183462589215009\n",
-      "Train Loss: -0.8183979926965176\n",
-      "Train Loss: -0.8183368734824352\n",
-      "Train Loss: -0.818499260987991\n",
-      "Train Loss: -0.8183364959863516\n",
-      "Train Loss: -0.8184678325286279\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def train_vae(train_data):\n",
     "    train_loss = 0\n",
@@ -193,12 +136,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Train Loss: 0.2206296641857196\n",
+      "Train Loss: 0.13651585827271143\n",
+      "Train Loss: 0.07836754639179279\n",
+      "Train Loss: 0.049603459831231676\n",
+      "Train Loss: 0.035828374135188565\n",
+      "Train Loss: 0.029814338311553\n",
+      "Train Loss: 0.02536992594981805\n",
+      "Train Loss: 0.023539976049692202\n",
+      "Train Loss: 0.023371421564847995\n",
+      "Train Loss: 0.02170574779693897\n",
+      "Train Loss: 0.021741728608806927\n",
+      "Train Loss: 0.02134656748519494\n",
+      "Train Loss: 0.02070120968020115\n",
+      "Train Loss: 0.021340196665662985\n",
+      "Train Loss: 0.02256954962817522\n",
+      "Train Loss: 0.02057242677666438\n",
+      "Train Loss: 0.02302084729457513\n",
+      "Train Loss: 0.020977917437752087\n",
+      "Train Loss: 0.021093307158503778\n",
+      "Train Loss: 0.021790261356494367\n",
+      "Train Loss: 0.022369756817053527\n",
+      "Train Loss: 0.023350448705829106\n",
+      "Train Loss: 0.023109545190938007\n",
+      "Train Loss: 0.021566733001516417\n",
+      "Train Loss: 0.024439557598760493\n",
+      "Train Loss: 0.02200858261531744\n",
+      "Train Loss: 0.02241434756284341\n",
+      "Train Loss: 0.025536162110093314\n",
+      "Train Loss: 0.02255405531002161\n",
+      "Train Loss: 0.023426195940910242\n",
+      "Train Loss: 0.026508762286259577\n",
+      "Train Loss: 0.02269691216926544\n",
+      "Train Loss: 0.02322960317803499\n",
+      "Train Loss: 0.02419461481846296\n",
+      "Train Loss: 0.02760129192700753\n",
+      "Train Loss: 0.026079188865155745\n",
+      "Train Loss: 0.024674238852010325\n",
+      "Train Loss: 0.0249226118127505\n",
+      "Train Loss: 0.02869400143241271\n",
+      "Train Loss: 0.029356928542256355\n",
+      "Train Loss: 0.025476824420575913\n",
+      "Train Loss: 0.02565003382280851\n",
+      "Train Loss: 0.027130266818671655\n",
+      "Train Loss: 0.029736179548005264\n",
+      "Train Loss: 0.026049768790984765\n",
+      "Train Loss: 0.02534205576357169\n",
+      "Train Loss: 0.027614850383729506\n",
+      "Train Loss: 0.029183621136232827\n",
+      "Train Loss: 0.030624710286083896\n",
+      "Train Loss: 0.030569303518113416\n"
+     ]
+    }
+   ],
    "source": [
+    "batches = np.array_split(np.array(pre_training), len(pre_training)//128)\n",
     "for epoch in range(50):\n",
-    "    batches = np.array_split(np.array(pre_training), len(pre_training)//128)\n",
     "    train_vae(batches)"
    ]
   },
@@ -211,10 +211,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "alpha = 0.2\n",
     "lr = 1e-3\n",
     "\n",
     "target_entropy = - \\\n",
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,29 +283,22 @@
     "\n",
     "    reward_batch = torch.FloatTensor(\n",
     "        reward_batch).to(device).unsqueeze(1)\n",
-    "    reward_batch = - dist(next_state_batch, goal_batch)\n",
     "\n",
     "    mask_batch = torch.BoolTensor(\n",
     "        mask_batch).to(device).unsqueeze(1)\n",
     "\n",
-    "    # state_batch, logvar = vae_model.encode(state_batch)\n",
-    "    # state_batch, logvar = state_batch.detach(), logvar.detach()\n",
-    "    # next_state_batch = vae_model.encode(next_state_batch)[0].detach()\n",
+    "    state_batch, logvar = vae_model.encode(state_batch)\n",
+    "    state_batch, logvar = state_batch.detach(), logvar.detach()\n",
+    "    next_state_batch = vae_model.encode(next_state_batch)[0].detach()\n",
     "\n",
-    "    # if np.random.rand() > 0.5:\n",
-    "    #     goal_batch = vae_model.reparameterize(state_batch, logvar)\n",
     "\n",
+    "    if np.random.rand() > 0.5:\n",
+    "        goal_batch = vae_model.reparameterize(state_batch, logvar)\n",
+    "\n",
+    "    reward_batch = - dist(next_state_batch, goal_batch)\n",
+    "    \n",
     "    state_batch = torch.cat((state_batch, goal_batch), 1)\n",
     "    next_state_batch = torch.cat((next_state_batch, goal_batch), 1)\n",
-    "    for i, (state, action, next_state, done) in enumerate(episode):\n",
-    "        for t in np.random.choice(len(episode), 20):\n",
-    "            s_hi = episode[t][-2]\n",
-    "            s_hi, _ = vae_model.encode(\n",
-    "                torch.FloatTensor(next_state).to(device))\n",
-    "            s_hi = s_hi.detach().cpu().numpy()\n",
-    "            mu, _ = vae_model.encode(torch.FloatTensor(state).to(device))\n",
-    "            mu = mu.detach().cpu().numpy()\n",
-    "            memory.push(mu, action, 0, s_hi, done, s_hi)\n",
     "\n",
     "    with torch.no_grad():\n",
     "        next_state_action, next_state_log_pi, _ = act_net.sample(\n",
@@ -372,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
@@ -396,127 +390,10 @@
       "Episode 1 -> Reward: -50.0\n",
       "Episode 2 -> Reward: -50.0\n",
       "Episode 3 -> Reward: -50.0\n",
-      "Episode 4 -> Reward: -49.0\n",
-      "Episode 5 -> Reward: -50.0\n",
+      "Episode 4 -> Reward: -50.0\n",
+      "Episode 5 -> Reward: -47.0\n",
       "Episode 6 -> Reward: -50.0\n",
-      "Episode 7 -> Reward: -50.0\n",
-      "Episode 8 -> Reward: -50.0\n",
-      "Episode 9 -> Reward: -50.0\n",
-      "Episode 10 -> Reward: -50.0\n",
-      "Train Loss: -0.8048813879489899\n",
-      "Train Loss: -0.8050292730331421\n",
-      "Train Loss: -0.8052889287471772\n",
-      "Train Loss: -0.8050947844982147\n",
-      "Train Loss: -0.8056789755821228\n",
-      "Train Loss: -0.8053813457489014\n",
-      "Train Loss: -0.8051162898540497\n",
-      "Train Loss: -0.8053756833076477\n",
-      "Train Loss: -0.8051999628543853\n",
-      "Train Loss: -0.8054827213287353\n",
-      "Train Loss: -0.8053594946861267\n",
-      "Train Loss: -0.8054150402545929\n",
-      "Train Loss: -0.805502200126648\n",
-      "Train Loss: -0.8052301943302155\n",
-      "Train Loss: -0.8051408231258392\n",
-      "Train Loss: -0.805518639087677\n",
-      "Train Loss: -0.8054404020309448\n",
-      "Train Loss: -0.8055746197700501\n",
-      "Train Loss: -0.8055885672569275\n",
-      "Train Loss: -0.805409038066864\n",
-      "Train Loss: -0.8054190218448639\n",
-      "Train Loss: -0.8050252199172974\n",
-      "Train Loss: -0.8055930614471436\n",
-      "Train Loss: -0.8054260432720184\n",
-      "Train Loss: -0.8054936408996582\n",
-      "Train Loss: -0.8054834544658661\n",
-      "Train Loss: -0.8055588364601135\n",
-      "Train Loss: -0.8053669393062591\n",
-      "Train Loss: -0.805558180809021\n",
-      "Train Loss: -0.8056679606437683\n",
-      "Train Loss: -0.805636602640152\n",
-      "Train Loss: -0.8055120766162872\n",
-      "Train Loss: -0.8056339800357819\n",
-      "Train Loss: -0.8052776396274567\n",
-      "Train Loss: -0.8055322885513305\n",
-      "Train Loss: -0.8055773198604583\n",
-      "Train Loss: -0.8057083070278168\n",
-      "Train Loss: -0.8055586397647858\n",
-      "Train Loss: -0.8053280174732208\n",
-      "Train Loss: -0.8056328594684601\n",
-      "Train Loss: -0.8055025279521942\n",
-      "Train Loss: -0.8058166325092315\n",
-      "Train Loss: -0.8057348191738128\n",
-      "Train Loss: -0.805386084318161\n",
-      "Train Loss: -0.8052308142185212\n",
-      "Train Loss: -0.8052287995815277\n",
-      "Train Loss: -0.8054149627685547\n",
-      "Train Loss: -0.8054883360862732\n",
-      "Train Loss: -0.8056721806526184\n",
-      "Train Loss: -0.8057235658168793\n",
-      "Episode 11 -> Reward: -50.0\n",
-      "Episode 12 -> Reward: -50.0\n",
-      "Episode 13 -> Reward: -50.0\n",
-      "Episode 14 -> Reward: -49.0\n",
-      "Episode 15 -> Reward: -48.0\n",
-      "Episode 16 -> Reward: -50.0\n",
-      "Episode 17 -> Reward: -50.0\n",
-      "Episode 18 -> Reward: -50.0\n",
-      "Episode 19 -> Reward: -50.0\n",
-      "Episode 20 -> Reward: -50.0\n",
-      "Train Loss: -0.7794031023979187\n",
-      "Train Loss: -0.7796211779117584\n",
-      "Train Loss: -0.7796043515205383\n",
-      "Train Loss: -0.7795813918113709\n",
-      "Train Loss: -0.7795173585414886\n",
-      "Train Loss: -0.7791036903858185\n",
-      "Train Loss: -0.7796208143234253\n",
-      "Train Loss: -0.7796710789203644\n",
-      "Train Loss: -0.7798186063766479\n",
-      "Train Loss: -0.7798705518245697\n",
-      "Train Loss: -0.7794503927230835\n",
-      "Train Loss: -0.7798791468143463\n",
-      "Train Loss: -0.7791137516498565\n",
-      "Train Loss: -0.7795354068279267\n",
-      "Train Loss: -0.7797931015491486\n",
-      "Train Loss: -0.7795936107635498\n",
-      "Train Loss: -0.7794314801692963\n",
-      "Train Loss: -0.7793724536895752\n",
-      "Train Loss: -0.7792303025722503\n",
-      "Train Loss: -0.7796741187572479\n",
-      "Train Loss: -0.7798020780086518\n",
-      "Train Loss: -0.7794673025608063\n",
-      "Train Loss: -0.7799032032489777\n",
-      "Train Loss: -0.7793249666690827\n",
-      "Train Loss: -0.7799384415149688\n",
-      "Train Loss: -0.7797999918460846\n",
-      "Train Loss: -0.7796335220336914\n",
-      "Train Loss: -0.7799394428730011\n",
-      "Train Loss: -0.7796230375766754\n",
-      "Train Loss: -0.7796047329902649\n",
-      "Train Loss: -0.7798068940639495\n",
-      "Train Loss: -0.7797064423561096\n",
-      "Train Loss: -0.780241847038269\n",
-      "Train Loss: -0.7801444172859192\n",
-      "Train Loss: -0.77984499335289\n",
-      "Train Loss: -0.780184268951416\n",
-      "Train Loss: -0.7797713875770569\n",
-      "Train Loss: -0.7795843243598938\n",
-      "Train Loss: -0.7800781011581421\n",
-      "Train Loss: -0.779797226190567\n",
-      "Train Loss: -0.7801015317440033\n",
-      "Train Loss: -0.7797348439693451\n",
-      "Train Loss: -0.7800344824790955\n",
-      "Train Loss: -0.7799903988838196\n",
-      "Train Loss: -0.7796738505363464\n",
-      "Train Loss: -0.7798927068710327\n",
-      "Train Loss: -0.779815924167633\n",
-      "Train Loss: -0.7802879810333252\n",
-      "Train Loss: -0.780140084028244\n",
-      "Train Loss: -0.7800689697265625\n",
-      "Creating window glfw\n",
-      "Episode 21 -> Reward: -50.0\n",
-      "Episode 22 -> Reward: -50.0\n",
-      "Episode 23 -> Reward: -50.0\n"
+      "Episode 7 -> Reward: -50.0\n"
      ]
     }
    ],
@@ -527,7 +404,7 @@
     "    state = env.reset()['observation']\n",
     "    mu, logvar = vae_model.encode(torch.FloatTensor(state).to(device))\n",
     "    mu, logvar = mu.detach(), logvar.detach()\n",
-    "    zg = vae_model.reparameterize(mu, logvar)\n",
+    "    zg = vae_model.reparameterize(mu, logvar).detach()\n",
     "    done = False\n",
     "    episode = list()\n",
     "    epi_reward = 0\n",
@@ -537,12 +414,12 @@
     "        action = noise.get_action(action, steps)\n",
     "        next_state, reward, done, _ = env.step(action)\n",
     "        next_state = next_state['observation']\n",
-    "        if epi % 20 == 0:\n",
-    "            env.render()\n",
+    "        # if epi % 20 == 0:\n",
+    "        #     env.render()\n",
     "        next_mu, _ = vae_model.encode(torch.FloatTensor(next_state).to(device))\n",
     "        next_mu = next_mu.detach()\n",
-    "        memory.push(mu.cpu().numpy(), action, reward,\n",
-    "                    next_mu.cpu().numpy(), done, zg.detach().cpu().numpy())\n",
+    "        memory.push(state, action, reward,\n",
+    "                    next_state, done, zg.cpu().numpy())\n",
     "        episode.append((state, action, next_state, done))\n",
     "\n",
     "        state = next_state\n",
@@ -564,9 +441,7 @@
     "            s_hi, _ = vae_model.encode(\n",
     "                torch.FloatTensor(next_state).to(device))\n",
     "            s_hi = s_hi.detach().cpu().numpy()\n",
-    "            mu, _ = vae_model.encode(torch.FloatTensor(state).to(device))\n",
-    "            mu = mu.detach().cpu().numpy()\n",
-    "            memory.push(mu, action, 0, s_hi, done, s_hi)\n",
+    "            memory.push(state, action, 0, next_state, done, s_hi)\n",
     "\n",
     "    if epi % 10 == 0 and epi > 0:\n",
     "        batches = [random.sample(data_vae, 128) for _ in range(10)]\n",
